k8s/jellyfin/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jellyfin-route
  namespace: jellyfin
spec:
  parentRefs:
    - name: public
      namespace: envoy-gateway-system
  hostnames:
    - "jellyfin.neffi.fr"
  rules:
    - backendRefs:
        - name: jellyfin
          port: 8096
      matches:
        - path:
            type: PathPrefix
            value: /
